--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.ch4lqxm.mongodb.net
-      MONGODB_USERNAME: yurydunetsdev
-      MONGODB_PASSWORD: p4HVELNp28quo2mn
+      MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}}
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
@@ -40,3 +40,4 @@ jobs:
         run: |
           echo "MONGODB_USERNAME: ${{env.MONGODB_USERNAME}}"
           echo "MONGODB_DB_NAME: ${{env.MONGODB_DB_NAME}}"
+          
