--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.ch4lqxm.mongodb.net
       PORT: 8080
+      MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}}
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
